refactor: eliminate Singleton, decouple UI from Storage